@@ -864,3 +864,31 @@ Creating a new generic function for 'qqplot' in the global environment
 > ## because internal dispatch did not work for length().
 > 
 > 
+> # getSrcref failed when rematchDefinition was used
+> text <- '
++ setClass("MyClass", representation(val = "numeric"))
++ setMethod("plot", signature(x = "MyClass"), 
++     function(x, y, ...) { 
++         # comment
++ 	NULL
++     })
++ setMethod("initialize", signature = "MyClass",
++     function(.Object, value) {
++ 	# comment
++ 	.Object@val <- value
++ 	return(.Object)
++     })
++ '
+> source(textConnection(text), keep.source = TRUE)
+> getSrcref(getMethod("plot", "MyClass"))
+function(x, y, ...) { 
+        # comment
+	NULL
+    }
+> getSrcref(getMethod("initialize", "MyClass"))
+function(.Object, value) {
+	# comment
+	.Object@val <- value
+	return(.Object)
+    }
+> 
